--- a/admin/login.html
+++ b/admin/login.html
@@ -4,16 +4,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
-        <title>Dashmix - Bootstrap 4 Admin Template &amp; UI Framework</title>
+        <title>MEDIKKO - Find doctors for covid 19 &amp; all diseases near you</title>
 
-        <meta name="description" content="Dashmix - Bootstrap 4 Admin Template &amp; UI Framework created by pixelcave and published on Themeforest">
-        <meta name="author" content="pixelcave">
-        <meta name="robots" content="noindex, nofollow">
+        <meta name="description" content="MEDIKKO - Find doctors for covid 19 &amp; all diseases near you">
+        <!--<meta name="author" content="pixelcave">
+        <meta name="robots" content="noindex, nofollow">-->
 
         <!-- Open Graph Meta -->
-        <meta property="og:title" content="Dashmix - Bootstrap 4 Admin Template &amp; UI Framework">
-        <meta property="og:site_name" content="Dashmix">
-        <meta property="og:description" content="Dashmix - Bootstrap 4 Admin Template &amp; UI Framework created by pixelcave and published on Themeforest">
+        <meta property="og:title" content="MEDIKKO - Find doctors for covid 19 &amp; all diseases near you">
+        <meta property="og:site_name" content="MEDIKKO">
+        <meta property="og:description" content="MEDIKKO - Find doctors for covid 19 &amp; all diseases near you">
         <meta property="og:type" content="website">
         <meta property="og:url" content="">
         <meta property="og:image" content="">
@@ -99,9 +99,9 @@
                                         <!-- Header -->
                                         <div class="mb-2 text-center">
                                             <a class="link-fx font-w700 font-size-h1" href="index.html">
-                                                <span class="text-dark">Dash</span><span class="text-primary">mix</span>
+                                                <span class="text-dark">MEDIKKO</span>
                                             </a>
-                                            <p class="text-uppercase font-w700 font-size-sm text-muted">Sign In</p>
+                                            <p class="text-uppercase font-w700 font-size-sm text-muted">Doctor Sign In</p>
                                         </div>
                                         <!-- END Header -->
 
@@ -110,11 +110,11 @@
                                         <!-- For more info and examples you can check out https://github.com/jzaefferer/jquery-validation -->
                                         <form class="js-validation-signin" action="be_pages_auth_all.html" method="POST">
                                             <div class="form-group">
-                                                <input type="text" class="form-control form-control-alt" id="" name="" placeholder="Mobile Number">
+                                                <input type="text" class="form-control form-control-alt" id="" name="" placeholder="Email Address">
                                             </div>
-                                            <!-- <div class="form-group">
-                                                <input type="password" class="form-control form-control-alt" id="login-password" name="login-password" placeholder="Password">
-                                            </div> -->
+                                            <div class="form-group">
+                                                <input type="password" class="form-control form-control-alt" id="" name="login-passwor" placeholder="Password">
+                                            </div>
                                             <div class="form-group">
                                                 <button type="submit" class="btn btn-block btn-hero-primary">
                                                     <i class="fa fa-fw fa-sign-in-alt mr-1"></i> Sign In
