--- a/register.html
+++ b/register.html
@@ -207,125 +207,6 @@
                                         <span class="nav-main-link-name">Covid-19 Outbreak</span>
                                     </a>
                                 </li>
-                                <!-- <li class="nav-main-heading">Account</li>
-                                <li class="nav-main-item">
-                                    <a class="nav-main-link nav-main-link-submenu" data-toggle="submenu" aria-haspopup="true" aria-expanded="false" href="#">
-                                        <i class="nav-main-link-icon fa fa-user-circle"></i>
-                                        <span class="nav-main-link-name">Billing &amp; Account</span>
-                                    </a>
-                                    <ul class="nav-main-submenu">
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" href="">
-                                                <span class="nav-main-link-name">Manage</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" href="">
-                                                <span class="nav-main-link-name">Privacy Settings</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" href="">
-                                                <span class="nav-main-link-name">Make Payment</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" href="">
-                                                <span class="nav-main-link-name">View Invoices</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" href="">
-                                                <span class="nav-main-link-name">Security</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" href="">
-                                                <span class="nav-main-link-name">Statistics</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="nav-main-item">
-                                    <a class="nav-main-link nav-main-link-submenu" data-toggle="submenu" aria-haspopup="true" aria-expanded="false" href="#">
-                                        <i class="nav-main-link-icon fa fa-life-ring"></i>
-                                        <span class="nav-main-link-name">Support</span>
-                                    </a>
-                                    <ul class="nav-main-submenu">
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" href="">
-                                                <span class="nav-main-link-name">Contact Support</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" href="">
-                                                <span class="nav-main-link-name">Knowledge Base</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="nav-main-item ml-lg-auto">
-                                    <a class="nav-main-link nav-main-link-submenu" data-toggle="submenu" aria-haspopup="true" aria-expanded="false" href="#">
-                                        <i class="nav-main-link-icon fa fa-brush"></i>
-                                        <span class="nav-main-link-name">Themes</span>
-                                    </a>
-                                    <ul class="nav-main-submenu nav-main-submenu-right">
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" data-toggle="theme" data-theme="default" href="#">
-                                                <i class="nav-main-link-icon fa fa-circle text-default"></i>
-                                                <span class="nav-main-link-name">Default</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" data-toggle="theme" data-theme="assets/css/themes/xwork.min.css" href="#">
-                                                <i class="nav-main-link-icon fa fa-circle text-xwork"></i>
-                                                <span class="nav-main-link-name">xWork</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" data-toggle="theme" data-theme="assets/css/themes/xmodern.min.css" href="#">
-                                                <i class="nav-main-link-icon fa fa-circle text-xmodern"></i>
-                                                <span class="nav-main-link-name">xModern</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" data-toggle="theme" data-theme="assets/css/themes/xeco.min.css" href="#">
-                                                <i class="nav-main-link-icon fa fa-circle text-xeco"></i>
-                                                <span class="nav-main-link-name">xEco</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" data-toggle="theme" data-theme="assets/css/themes/xsmooth.min.css" href="#">
-                                                <i class="nav-main-link-icon fa fa-circle text-xsmooth"></i>
-                                                <span class="nav-main-link-name">xSmooth</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" data-toggle="theme" data-theme="assets/css/themes/xinspire.min.css" href="#">
-                                                <i class="nav-main-link-icon fa fa-circle text-xinspire"></i>
-                                                <span class="nav-main-link-name">xInspire</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" data-toggle="theme" data-theme="assets/css/themes/xdream.min.css" href="#">
-                                                <i class="nav-main-link-icon fa fa-circle text-xdream"></i>
-                                                <span class="nav-main-link-name">xDream</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" data-toggle="theme" data-theme="assets/css/themes/xpro.min.css" href="#">
-                                                <i class="nav-main-link-icon fa fa-circle text-xpro"></i>
-                                                <span class="nav-main-link-name">xPro</span>
-                                            </a>
-                                        </li>
-                                        <li class="nav-main-item">
-                                            <a class="nav-main-link" data-toggle="theme" data-theme="assets/css/themes/xplay.min.css" href="#">
-                                                <i class="nav-main-link-icon fa fa-circle text-xplay"></i>
-                                                <span class="nav-main-link-name">xPlay</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li> -->
                             </ul>
                         </div>
                         <!-- END Main Navigation -->
@@ -342,9 +223,6 @@
                         <h3 class="py-3">
                             Register yourself to <a class="link-fx" href="#">MEDIKKO</a><i class="fa fa-fw fa-heartbeat text-danger"></i>
                         </h3>
-                        <!--<p class="font-size-lg text-muted mb-0">
-                            Over-profit by choosing <strong>Dashmix</strong>. It is crafted with passion to enable you build the best dashboards.
-                        </p>-->
                     </div>
                     <div class="block block-rounded">
                         <div class="block-content">
@@ -354,35 +232,30 @@
                                     <i class="fa fa-fw fa-user-circle text-muted mr-1"></i> Doctor's Profile
                                 </h2>
                                 <div class="row push">
-                                    <!--<div class="col-lg-4">
-                                        <p class="text-muted">
-                                            Your account’s vital info. Your username will be publicly visible.
-                                        </p>
-                                    </div>-->
                                     <div class="col-lg-12 col-xl-12">
                                         <div class="form-group">
-                                            <label for="dm-profile-name">Name</label>
-                                            <input type="text" class="form-control" id="dm-profile-name" name="dm-profile-name" placeholder="Enter your name..">
+                                            <label for="name">Name</label>
+                                            <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name..">
                                         </div>
                                         <div class="form-group">
-                                            <label for="dm-profile-edit-job-title">Designation (Degree)</label>
-                                            <input type="text" class="form-control" id="dm-profile-edit-job-title" name="dm-profile-edit-job-title" placeholder="Add your job title..">
+                                            <label for="designation">Designation (Degree)</label>
+                                            <input type="text" class="form-control" id="designation" name="designation" placeholder="Add your job title..">
                                         </div>
                                         <div class="form-group">
-                                            <label for="dm-profile-mobile">Mobile Number</label>
-                                            <input type="text" class="form-control" id="dm-profile-mobile" name="dm-profile-mobile" placeholder="Enter your username..">
+                                            <label for="mobile">Mobile Number</label>
+                                            <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Enter your username..">
                                         </div>
                                         <div class="form-group">
-                                            <label for="dm-profile-email">Email Address</label>
-                                            <input type="email" class="form-control" id="dm-profile-email" name="dm-profile-email" placeholder="Enter your email..">
+                                            <label for="email">Email Address</label>
+                                            <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email..">
                                         </div> 
                                         <div class="form-group">
-                                            <label for="dm-profile-edit-street-1">Password</label>
-                                            <input type="password" class="form-control" id="dm-profile-edit-street-1" name="dm-profile-edit-street-1" placeholder="Enter your password..">
+                                            <label for="password">Password</label>
+                                            <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password..">
                                         </div>    
                                         <div class="form-group">
-                                            <label for="dm-profile-edit-street-1">Goolgle Map Link</label>
-                                            <input type="text" class="form-control" id="dm-profile-edit-street-1" name="dm-profile-edit-street-1" placeholder="Enter your google map link..">
+                                            <label for="gooleMap">Goolgle Map Link</label>
+                                            <input type="text" class="form-control" id="gooleMap" name="gooleMap" placeholder="Enter your google map link..">
                                         </div>                                       
                                         <div class="form-group">
                                             <label>Profile Picture</label>
@@ -391,8 +264,8 @@
                                             </div>
                                             <div class="custom-file">
                                                 <!-- Populating custom file input label with the selected filename (data-toggle="custom-file-input" is initialized in Helpers.coreBootstrapCustomFileInput()) -->
-                                                <input type="file" class="custom-file-input js-custom-file-input-enabled" data-toggle="custom-file-input" id="dm-profile-edit-avatar" name="dm-profile-edit-avatar">
-                                                <label class="custom-file-label" for="dm-profile-edit-avatar">Choose a new Profile Picture</label>
+                                                <input type="file" class="custom-file-input js-custom-file-input-enabled" data-toggle="custom-file-input" id="profilePicture" name="profilePicture">
+                                                <label class="custom-file-label" for="profilePicture">Choose a new Profile Picture</label>
                                             </div>
                                         </div>
                                     </div>
